--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Ruby Extension Gallery</title>
+  <title>Xilo Inc.</title>
   <link rel="stylesheet" href="https://ruby-devs.vercel.app/gallery/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;700&amp;display=swap">
   <link rel="icon" type="image/x-icon" href="https://ruby-devs.vercel.app/gallery/img/ruby.png">
@@ -58,123 +58,4 @@
     <input type="text" id="extensionSearch" placeholder="Search...">
     <button onclick="searchExtensions()">Search</button>
   </div>
-  <div class="container" id="extensionContainer">
-    <!-- Extensions will be dynamically added here -->
-  <div class="extension legendary-extension" style="animation: 0.5s ease 0s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/poop.png" alt="Poop Extension"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/poop.js">Download</button><strong>Poop Extension</strong><p>The most useful, amazing, and well done extension, made by the most cool person ever! (ddededodediamante)</p></div></div><div class="extension legendary-extension" style="animation: 0.5s ease 0.2s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/mewingUtils.png" alt="Mewing Utils"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/mewingUtils.js">Download</button><strong>Mewing Utils</strong><p>Wanted to mew easily? Mewing Utils is here!</p></div></div><div class="extension legendary-extension" style="animation: 0.5s ease 0.4s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/Joe.png" alt="Joe"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/Joe.js">Download</button><strong>Joe</strong><p>Joe</p></div></div><div class="extension recommended-extension" style="animation: 0.5s ease 0.6s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/toastnotifs.png" alt="ToastNotifs"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/toastnotifs.js">Download</button><strong>ToastNotifs</strong><p>Wanted to make an notification system in your project but you couldn't make it work? Toast Notifs is here! (add unsandboxed)</p></div></div><div class="extension recommended-extension" style="animation: 0.5s ease 0.8s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/penguingpt.png" alt="PenguinGPT"><div class="content"><button class="download" download-url="https://extensions.penguinmod.com/images/MubiLop/penguingpt.png">Download</button><strong>PenguinGPT</strong><p>Using WorkingTurboGPT's source code, we made PenguinGPT! New features will come like DALL-E, etc, all for free!</p></div></div><div class="extension recommended-extension" style="animation: 0.5s ease 1s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/analytics.webp" alt="Analytics"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/analytics.js">Download</button><strong>Analytics</strong><p>See Analytics about your project, using our sophisticated web tools.</p><a href="/docs?ext=Analytics" target="_blank">Extension Documentation</a></div></div><div class="extension" style="animation: 0.5s ease 1.2s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/penguinpedia.webp" alt="PenguinPedia"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/penguinpedia.js">Download</button><strong>PenguinPedia</strong><p>Get a lot of data from Wikipedia, like definitions and images!</p></div></div><div class="extension" style="animation: 0.5s ease 1.4s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/speechtotext.png" alt="Speech2Text"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/speechtotext.js">Download</button><strong>Speech2Text</strong><p>Recognizes words or sentences said into the microphone. Experimental, can be innacurate sometimes.</p></div></div><div class="extension" style="animation: 0.5s ease 1.6s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/1mb.svg" alt="1mbShortener"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/1mb.js">Download</button><strong>1mbShortener</strong><p>Using 1mb Api you can now share links without it being long!</p></div></div><div class="extension" style="animation: 0.5s ease 1.8s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/gofile.png" alt="GoFile"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/gofile.js">Download</button><strong>GoFile</strong><p>Upload any files with no limits using the gofile.io service. Updates may come with better features.</p></div></div><div class="extension" style="animation: 0.5s ease 2s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/turbogemini.webp" alt="TurboGemini"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/geminiai.js">Download</button><strong>TurboGemini</strong><p>Use Google's brand-new Gemini AI technology (similar to ChatGPT) inside your projects.</p></div></div><div class="extension" style="animation: 0.5s ease 2.2s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/penguinhook.png" alt="PenguinHook"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/penguinhook.js">Download</button><strong>PenguinHook</strong><p>Send Webhook requests, that can be Discord or any type of webhook.</p></div></div><div class="extension" style="animation: 0.5s ease 2.4s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/rubymaps.svg" alt="Ruby Maps"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/rubymaps.js">Download</button><strong>Ruby Maps</strong><p>An extension that lets you integrate the power of maps into your projects!</p></div></div><div class="extension" style="animation: 0.5s ease 2.6s 1 normal forwards running fadeIn;"><img src="https://ruby-devs.vercel.app/cdn/thumbnails/turboweather.webp" alt="TurboWeather"><div class="content"><button class="download" download-url="https://ruby-devs.vercel.app/cdn/extensions/turboweather.js">Download</button><strong>TurboWeather</strong><p>Show weather and location data for any place in our world. Data that could be used for doxxing is deleted from results.</p></div></div></div>
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      // Uhhh ignore this
-      if (location.search == '?ddededodediamante=true') { document.body.style.fontFamily = "Comic Sans MS, sans-serif, Arial"; };
-      
-      // Fetch JSON data from the website
-      fetch('https://ruby-devs.vercel.app/data/extensions.json')
-        .then(response => response.json())
-        .then(data => {
-          // Create extensions based on JSON data
-          createExtensions(data);
-        })
-        .catch(error => console.error('Error fetching data:', error));
-    });
-
-    function createExtensions(data) {
-  const container = document.getElementById('extensionContainer');
-
-  // Sort data based on recommended status (true first)
-  data.sort((a, b) => (b.recommended === true) - (a.recommended === true));
-
-  // Loop through the sorted JSON data and create extensions
-  data.forEach((extensionData, index) => {
-    const extension = document.createElement('div');
-    extension.className = 'extension';
-
-    // Set inline style for animation delay based on index
-    extension.style.animation = `fadeIn 0.5s forwards ${index * 0.2}s`;
-
-    const img = document.createElement('img');
-    img.src = extensionData.thumb;
-    img.alt = extensionData.name;
-
-    const content = document.createElement('div');
-    content.className = 'content';
-
-    const strong = document.createElement('strong');
-    strong.textContent = extensionData.name;
-
-    const p = document.createElement('p');
-    p.textContent = extensionData.description;
-
-    const downloadBtn = document.createElement('button');
-    downloadBtn.className = 'download';
-    downloadBtn.textContent = 'Download';
-    downloadBtn.setAttribute('download-url', extensionData.url);
-    downloadBtn.addEventListener('click', function () {
-      downloadJS(extensionData.url, extensionData.name);
-    });
-
-    // Append elements to the extension
-    content.appendChild(downloadBtn);
-    if (extensionData.legendary && extensionData.legendary === true) {
-      // For very cool extensions
-      extension.classList.add('legendary-extension');
-    } else if (extensionData.recommended && extensionData.recommended === true) {
-      // If recommended, add a special class for glow animation
-      extension.classList.add('recommended-extension');
-    }
-    
-    content.appendChild(strong);
-    content.appendChild(p);
-
-    if (extensionData.docs && extensionData.docs === true) {
-      const a = document.createElement('a');
-      a.textContent = "Extension Documentation";
-      a.href = "/docs?ext=" + encodeURIComponent(extensionData.name);
-      a.target = "_blank";
-      content.appendChild(a);
-    }
-
-    extension.appendChild(img);
-    extension.appendChild(content);
-
-    // Append the extension to the container
-    container.appendChild(extension);
-  });
-}
-
-    function downloadJS(url, filename) {
-      fetch(url)
-        .then(response => response.text())
-        .then(jsCode => {
-          const blob = new Blob([jsCode], { type: 'application/javascript' });
-          const link = document.createElement('a');
-          link.href = URL.createObjectURL(blob);
-          link.download = `${filename}.js`;
-          link.click();
-        })
-        .catch(error => console.error('Error fetching JS code:', error));
-    }
-
-    // Update the search as the user types
-    document.getElementById('extensionSearch').addEventListener('input', searchExtensions);
-
-    // Add this function for searching extensions
-    function searchExtensions() {
-      const input = document.getElementById('extensionSearch').value.toLowerCase();
-      const extensions = document.getElementsByClassName('extension');
-
-      for (const extension of extensions) {
-        const extensionName = extension.querySelector('strong').textContent.toLowerCase();
-        const extensionDescription = extension.querySelector('p').textContent.toLowerCase();
-
-        if (extensionName.includes(input) || extensionDescription.includes(input)) {
-          extension.style.display = 'block';
-        } else {
-          extension.style.display = 'none';
-        }
-      }
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
 </body></html>
