my dad left with the milk and never came back-

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <title>Xilo. Inc | The Website for something.</title>
 </head>
 <body>
-
+  <center>
+  <div>
+    <img src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" alt="logo go yes">
+  </div>
+  </center>
 </body>
 </html>
