--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <center>
   <div>
-    <img src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" alt="logo go yes">
+    <img src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:60%;" alt="logo go yes">
   </div>
   </center>
 </body>
