did some updates!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/x-icon" href="Xilo. Inc Logo (1).png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&display=swap" rel="stylesheet">
@@ -11,9 +12,12 @@
 </head>
 <body>
   <center>
-  <div>
-    <img src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:60%;" alt="logo go yes">
+  <div class="navbar-div">
+    <center>
+      <img src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:60%;" alt="logo go yes">
+    </center>
   </div>
   </center>
+  <h1 class="heading-text">Hello, and Welcome to the Xilo. Inc Website!</h1>
 </body>
 </html>
