random ahh update.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
   <center>
   <div class="navbar-div">
     <center>
-      <img src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:60%;" alt="logo go yes">
+      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:60%;" alt="logo go yes">
     </center>
   </div>
   </center>
   <h1 class="heading-text">Hello, and Welcome to the Xilo. Inc Website!</h1>
+  <p>we have no idea what we're doing.</p>
 </body>
 </html>
