--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
   <center>
   <div class="navbar-div">
-    <center>
-      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:60%;" alt="logo go yes">
-    </center>
+      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:20%;" alt="logo go yes">
   </div>
   </center>
   <h1 class="heading-text">Hello, and Welcome to the Xilo. Inc Website!</h1>
   <p>we have no idea what we're doing.</p>
+  <a class="button" href="https://toastyzz2.github.io/xilo.incorporated/login">Login</a>
+    <a class="button" href="https://toastyzz2.github.io/xilo.incorporated/signup">Signup</a>
 </body>
 </html>
