--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
   <center>
   <div class="navbar-div">
-      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:20%;" alt="logo go yes">
+    <center>
+      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" style="height:20%; width: auto;" alt="logo go yes">
+    </center>
   </div>
   </center>
   <h1 class="heading-text">Hello, and Welcome to the Xilo. Inc Website!</h1>
