--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <center>
   <div class="navbar-div">
     <center>
-      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" width="30" height="" alt="logo go yes">
+      <img class="navbar-image" src="Xilo. Inc Website.png" herf="https://toastyzz2.github.io/xilo.incorporated/" width="125" height="" alt="logo go yes">
     </center>
   </div>
   </center>
@@ -23,17 +23,19 @@
     <center>
       <h1 class="heading-text">The Number 1 website for <em>Something</em>.</h1>
     </center>
-  <em>
+    <center>
+       <em>
     <p class="heading-p">Made by: <a href="https://github.com/Toastyzz0">Toastyzz</a>, <a href="https://github.com/Toastyzz2">Toastyzz2 on <a href="https://github.com">Github</a>.</p>
     <p class="heading-p">Also Made by: <a href="https://github.com/jefisalreadytkn">sharkyydev (jefisalreadytkn)</a>.</p>
   </em>
+    </center>
   </heading>
   
   <h1 class="heading-h1">Home Page:</h1>
-  <p>Stuff that is imporant or whatever.</p>
+  <p class="heading-p">Stuff that is imporant or whatever.</p>
 <center>
     <div class="homepage-div">
-    <img class="navbar-image" src="Logo (1).png" width="50" height="" alt="logo go yes">
+    <img class="navbar-image" src="Logo (1).png" width="125" height="" alt="logo go yes">
     <h5 class="h1-homepage-div">Contact</h5>
     <p class="p-homepage-div">Contact us on this page using Email, Discord, whatever.</p>
     <a class="button" href="contact-page.html">Contact us!</a>
